background bug after deploy on iOS and MacOS fixed.

--- a/src/app/pages/main-page/components/main-page/main-page.component.scss
+++ b/src/app/pages/main-page/components/main-page/main-page.component.scss
@@ -6,7 +6,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-  padding: 1rem;
+  padding: 0 0.5rem;
   color: white;
   text-align: center;
 }
@@ -21,6 +21,7 @@
   display: flex;
   justify-content: center;
   text-align: start;
+  padding-top: 1rem;
 }
 
 .main-page-title {
@@ -46,9 +47,11 @@
 }
 
 .main-page-content-apply {
-  font-size: 1.7em;
+  font-size: 1.9em;
+  font-weight: bold;
   letter-spacing: 0.05rem;
   line-height: 2rem;
+  padding-top: 0.5rem;
 }
 
 @media screen and (max-width: 970px) {
@@ -86,6 +89,7 @@
 
   .main-page-content-apply {
     font-size: 1.5em;
+    font-weight: normal;
     line-height: normal;
     padding-top: 0.5rem;
   }
